# co-pylot-widget

./: README.md  example.py  pyproject.toml
co_pylot_widget/: __init__.py  copylot.py
copylot_widget/: copylot.py
examples/: example.py
stagemap_widget/: signalchangevar.py  stagemap.py
